# CSchachEngine

./: .gitmodules  Architektur  CMakeLists.txt
ChessSprites/: thx.txt
src/: ChessApp.cpp  ChessApp.h  main.cpp  tester.h
src/core/: Bitboard.cpp  Bitboard.h  ChessBoard.cpp  ChessBoard.h  ChessGame.cpp  ChessGame.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  Movelist.h  Piece.cpp  Piece.h  UIManager.cpp  UIManager.h
src/core/MoveGeneration/: Attacks.h  MoveGenerator.cpp  MoveGenerator.h  Movelist.h
src/players/: IPlayer.h
src/util/: Helper.h  LogConfig.h  Logger.h
